devops-day1/rollup-project/k8s/sequencer.yaml
apiVersion: v1
kind: Service
metadata:
  name: sequencer-network
  labels:
    app: sequencer
spec:
  ports:
  - port: 3000
    name: metrics
  clusterIP: None
  selector:
    app: sequencer
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: sequencer
spec:
  serviceName: "sequencer-network"
  replicas: 3
  selector:
    matchLabels:
      app: sequencer
  template:
    metadata:
      labels:
        app: sequencer
    spec:
      containers:
      - name: sequencer
        image: rollup-project-backend:latest
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            memory: "256Mi"
            cpu: "250m"
          limits:
            memory: "512Mi"
            cpu: "500m"
